// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page renders renders with config value for multiauth 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="http://localhost:5601/images/test.png"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Title1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    SubTitle1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="username_input"
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="password_input"
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="basicauth_login_button"
        className="test-btn-style"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log in
      </EuiButton>
    </EuiFormRow>
    <EuiSpacer
      size="xs"
    />
    <EuiHorizontalRule
      margin="xl"
      size="full"
    />
    <EuiSpacer
      size="xs"
    />
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="openid_login_button"
        className="test-btn-style"
        data-test-subj="submit"
        href="/app/opensearch-dashboards/auth/openid/login"
        iconType="http://localhost:5601/images/test.png"
        size="s"
        type="prime"
      >
        Button1
      </EuiButton>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="saml_login_button"
        className="test-btn-style"
        data-test-subj="submit"
        href="/app/opensearch-dashboards/auth/saml/captureUrlFragment?nextUrl=%2F"
        iconType="http://localhost:5601/images/test.png"
        size="s"
        type="prime"
      >
        Button2
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;

exports[`Login page renders renders with config value: string 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="http://localhost:5601/images/test.png"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Title1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    SubTitle1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="username_input"
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="password_input"
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="basicauth_login_button"
        className="test-btn-style"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log in
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;

exports[`Login page renders renders with config value: string array 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="http://localhost:5601/images/test.png"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Title1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    SubTitle1
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="username_input"
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="password_input"
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="basicauth_login_button"
        className="test-btn-style"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log in
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;

exports[`Login page renders renders with default value: string 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="test-file-stub"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Log in to OpenSearch Dashboards
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    If you have forgotten your username or password, contact your system administrator.
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="username_input"
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="password_input"
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="basicauth_login_button"
        className="btn-login"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log in
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;

exports[`Login page renders renders with default value: string array 1`] = `
<EuiListGroup
  className="login-wrapper"
>
  <EuiImage
    alt=""
    size="fullWidth"
    url="test-file-stub"
  />
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="m"
    textAlign="center"
  >
    Log in to OpenSearch Dashboards
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiText
    size="s"
    textAlign="center"
  >
    If you have forgotten your username or password, contact your system administrator.
  </EuiText>
  <EuiSpacer
    size="s"
  />
  <EuiForm
    component="form"
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="username_input"
        data-test-subj="user-name"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Username"
        prepend={
          <EuiIcon
            type="user"
          />
        }
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      isInvalid={false}
      labelType="label"
    >
      <EuiFieldText
        aria-label="password_input"
        data-test-subj="password"
        isInvalid={false}
        onChange={[Function]}
        placeholder="Password"
        prepend={
          <EuiIcon
            type="lock"
          />
        }
        type="password"
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiButton
        aria-label="basicauth_login_button"
        className="btn-login"
        data-test-subj="submit"
        fill={true}
        onClick={[Function]}
        size="s"
        type="submit"
      >
        Log in
      </EuiButton>
    </EuiFormRow>
  </EuiForm>
</EuiListGroup>
`;
